--- a/frontend/src/screens/login.css
+++ b/frontend/src/screens/login.css
@@ -4,3 +4,18 @@
   align-items: center;
   background-color: aquamarine;
 }
+
+.link {
+  text-decoration: none;
+  color: rgb(10, 10, 10);
+  display: flex;
+  flex-direction: column;
+  align-items: center ;
+  margin: 10px;
+}
+
+.button {
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 4px;
+}
