--- a/frontend/src/screens/login.css
+++ b/frontend/src/screens/login.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: aquamarine;
+  font-size: larger;
 }
 
 .link {
@@ -18,4 +19,14 @@
   width: 100%;
   margin-top: 10px;
   border-radius: 4px;
+}
+
+li {
+  list-style-type: none;
+}
+
+.table tr, td, th {
+  border: 0;
+  border-collapse: collapse;
+  
 }
